Bug 1823201 - Use display rather than visibility: collapse to hide scroll arrows. r=Gijs
Since visibility: collapse can still end up with a non-zero size for
e.g., padding and so. display: none is a better fit for this.

I noticed this while investigating the overflow mentioned in the
previous patch.

Differential Revision: https://phabricator.services.mozilla.com/D172935

--- a/toolkit/themes/shared/menu-scrolling.css
+++ b/toolkit/themes/shared/menu-scrolling.css
@@ -9,7 +9,7 @@
 /* Hide arrow buttons when there's nothing to scroll in that direction */
 .menupopup-arrowscrollbox[scrolledtostart="true"]::part(scrollbutton-up),
 .menupopup-arrowscrollbox[scrolledtoend="true"]::part(scrollbutton-down) {
-  visibility: collapse;
+  display: none;
 }
 
 /* Prevent the scrolled contents of the menupopup from jumping vertically when
